# SonicARray

./: .gitignore  Couch 204 Ambisonics Decoder (Pre-calculated 3rd Order).json  TESTING_GUIDE.md  connect_speakers.sh  readme.md  speakers.yaml
cpp/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_VERIFICATION.md  SoundARray.sln  SoundARray.vcxproj  SoundARray.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  offline_tests_real_layout.vcxproj  offline_tests_real_layout.vcxproj.filters
cpp/SoundARray.dir/Debug/: SoundARray.exe.recipe
cpp/SoundARray.dir/Debug/SoundARray.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  SoundARray.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/SoundARray.dir/Release/: SoundARray.exe.recipe
cpp/SoundARray.dir/Release/SoundARray.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/build_linux/: SoundARray  offline_tests_real_layout
cpp/build_mingw/: speakers.yaml
cpp/offline_tests_real_layout.dir/Release/: offline_tests_real_layout.exe.recipe
cpp/offline_tests_real_layout.dir/Release/offline_.EB5B4139.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  offline_tests_real_layout.lastbuildstate
cpp/src/: AudioEngine.cpp  AudioEngine.h  ConfigLoader.cpp  ConfigLoader.h  IAudioOutput.h  JackAudioOutput.cpp  JackAudioOutput.h  OSCReceiver.cpp  OSCReceiver.h  OSCSender.cpp  OSCSender.h  PortAudioOutput.cpp  PortAudioOutput.h  RendererFactory.cpp  RendererFactory.h  SimdUtils.h  SpatialRenderer.h  Speaker.h  TCPGainsSender.cpp  TCPGainsSender.h  VBAPRenderer.cpp  VBAPRenderer.h  main.cpp  offline_tests_real_layout.cpp  speakers.yaml  spin_source.py
cpp/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cpp/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cpp/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cpp/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cpp/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
docs/: ARCHITECTURE_DESIGN.md  BUILD.md  DEBUG_WITHOUT_QUEST.md  HOW_TO_ADD_NEW_ALGORITHM.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  后端测试与Meter.md
docs/user_study/: DATA_ANALYSIS_TEMPLATE.md  INFORMED_CONSENT.md  PRE_POST_TEST.md  QUICK_EVALUATION.md  README.md  SYSTEM_EVALUATION.md  USER_STUDY.md
tests/: osc_multi_sources.py
tools/: backend_meter.py  test_osc_sender.py  test_osc_soundarray.pd
unity/: .gitignore  README.md  SCENE_SETUP.md
unity/.utmp/RelWithDebInfo/455b4h69/: hash_key.txt
unity/.utmp/RelWithDebInfo/455b4h69/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  additional_project_files.txt  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  build_file_index.txt  cmake_install.cmake  compile_commands.json  metadata_generation_command.txt  symbol_folder_index.txt
unity/.utmp/RelWithDebInfo/455b4h69/arm64-v8a/.cmake/api/v1/reply/: cache-v2-3f71ad335f677f078389.json  cmakeFiles-v1-94d3664dbd65d99081be.json  codemodel-v2-71b31196d00e36566164.json  index-2026-03-19T04-17-44-0450.json  target-game-RelWithDebInfo-0821bd7c3067ef103018.json  target-swappywrapper-RelWithDebInfo-3b728eec2cf1e7840fa0.json
unity/.utmp/RelWithDebInfo/455b4h69/arm64-v8a/FramePacing/: cmake_install.cmake
unity/.utmp/RelWithDebInfo/455b4h69/arm64-v8a/GameActivity/: cmake_install.cmake
unity/.utmp/RelWithDebInfo/7235kf41/: hash_key.txt
unity/.utmp/RelWithDebInfo/7235kf41/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  additional_project_files.txt  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  build_file_index.txt  cmake_install.cmake  compile_commands.json  metadata_generation_command.txt  prefab_config.json  symbol_folder_index.txt
unity/.utmp/RelWithDebInfo/7235kf41/arm64-v8a/.cmake/api/v1/reply/: cache-v2-d3f30eab25ab14470aef.json  cmakeFiles-v1-b4ecf04ca35a21fb6406.json  codemodel-v2-bda1c4fd263d91166a3c.json  index-2026-03-30T00-42-32-0160.json  (+2 more)
unity/.utmp/RelWithDebInfo/7235kf41/arm64-v8a/FramePacing/: cmake_install.cmake
unity/.utmp/RelWithDebInfo/7235kf41/arm64-v8a/GameActivity/: cmake_install.cmake
unity/Assets/Editor/: AddOVRCameraRigForQuest.cs  BuildScript.cs  CopySpeakersYaml.cs  CreateSoundARrayScene.cs  CreateSpeakerDebugScene.cs  FixVRUIInput.cs  SetupHandTracking.cs  XRModeToggle.cs
unity/Assets/Materials/: SourceMaterial.mat  SpeakerActive.mat  SpeakerDefault.mat
unity/Assets/Oculus/: OculusProjectConfig.asset
unity/Assets/Plugins/Android/: AndroidManifest.xml
unity/Assets/Prefabs/: SpatialSource.prefab
unity/Assets/Resources/: OculusRuntimeSettings.asset
unity/Assets/Scenes/: MainScene.unity  SpeakerDebug.unity
unity/Assets/Scripts/: ARPassthroughSetup.cs  EditorDebugHelper.cs  GazeExitButton.cs  HandGestureController.cs  HandTrackingDebugUI.cs  HandVisualizer.cs  OSCClient.cs  OSCReceiver.cs  OSCServer.cs  SimpleDrag.cs  SourceManager.cs  SpatialAudioController.cs  SpatialSource.cs  SpeakerManager.cs  StreamingAssetsHelper.cs  VBAPGainReceiver.cs  VRStatusPanel.cs  XRSourceController.cs
unity/Assets/Scripts/SpeakerDebug/: AnchorStatusDisplay.cs  ButtonBridge.cs  DEBUG_CHECKLIST.md  DataModels.cs  GainInterfaces.cs  IAnchorShareTransport.cs  MockGainProvider.cs  RoomAnchorManager.cs  SETUP.md  SimpleUI.cs  SpeakerDebugBootstrap.cs  SpeakerSpawner.cs  SpeakerVisualizer.cs  SpeakerYamlLoader.cs
unity/Assets/StreamingAssets/: speakers.json  speakers.yaml
unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
unity/Assets/XR/Settings/: OpenXR Package Settings.asset
unity/Assets/_Recovery/: 0 (1).unity  0 (12).unity  0 (13).unity  0 (14).unity  0 (15).unity  0 (16).unity  0 (2).unity  0 (4).unity  0 (5).unity
unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+2 files in other folders)
